[package]
name = "codee"
version = "0.1.1"
edition = "2021"
authors = ["Marc-Stefan Cassola"]
categories = ["encoding"]
description = "Easy and flexible way of encoding and decoding data into either strings or bytes"
exclude = ["examples/", "tests/"]
keywords = ["codec", "utilities", "serialization", "deserialization"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Synphonyte/codee"

[dependencies]
base64 = { version = "0.21", optional = true }
bincode = { version = "1", optional = true }
miniserde = { version = "0.1", optional = true }
prost = { version = "0.12", optional = true }
rkyv = { version = "0.7", optional = true, features = ["validation", "strict"] }
rmp-serde = { version = "1.1", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
serde-lite = { version = "0.5", optional = true }
thiserror = "1.0.61"

[features]
prost = ["dep:prost"]
json_serde = ["dep:serde_json", "dep:serde"]
msgpack_serde = ["dep:rmp-serde", "dep:serde"]
bincode_serde = ["dep:bincode", "dep:serde"]
serde_lite = ["dep:serde-lite"]


[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde-lite = { version = "0.5", features = ["derive"] }
leptos = "0.6"
leptos-use = "0.10"

[package.metadata.docs.rs]
all-features = true